# ctfp-book-club

./: README.md
exercises/barrymoo/chapter0/: README.md
exercises/barrymoo/chapter02/: .gitignore  LICENSE  README.md  chapter02.cabal  question6.dot
exercises/barrymoo/chapter02/src/: Main.hs
exercises/barrymoo/chapter03/: partial.dot  preorder.dot
exercises/barrymoo/chapter08/: .gitignore  LICENSE  README.md  bifunctor.py  chapter08.cabal
exercises/barrymoo/chapter08/src/: Main.hs  Profunctor.hs
exercises/barrymoo/chapter10/: scratch.u
exercises/eschulte/: category-theory-for-programmers.asd  chapter-01.lisp  chapter-03.lisp  chapter-03.org  chapter-04.lisp  chapter-05.lisp  chapter-06.lisp  chapter-07.lisp  chapter-10.lisp  chapter-10.org  ctfp.lisp  exercises.lisp
exercises/joelmccracken/chapter03/: README.md
exercises/joelmccracken/chapter05/: README.md
exercises/joelmccracken/chapter06/: README.md
exercises/jonathanlorimer/: package-lock.json  package.json  tsconfig.json  tslint.json
exercises/jonathanlorimer/notes/: CH03.md  CH05.md  CH07.md  CH08.md
exercises/jonathanlorimer/src/: CH01.ts  CH02.ts  CH03.ts  CH04.ts  CH05.ts  CH06.ts  CH07.ts  CH08.hs  CH08.ts
exercises/markmeredith/chapter-1/: Cargo.toml
exercises/markmeredith/chapter-2/: Cargo.toml  README.md
exercises/markmeredith/chapter-3/: README.md
exercises/markmeredith/chapter-4/: Makefile  README.md  safe.cpp
exercises/markmeredith/chapter-5/: Cargo.toml  README.md
exercises/markmeredith/chapter-6/: README.md  meson.build  shape.cpp
(+29 files in other folders)
