name:                chapter02
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/barrymoo/chapter02#readme
license:             BSD3
license-file:        LICENSE
author:              Barry Moore
maintainer:          moore0557@gmail.com
copyright:           2019 Barry Moore
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chapter02
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:         base >= 4.7 && < 5
                       , transformers
                       , containers
                       , random
